--- a/ExViewer/Controls/TaggingRecordPresenter.xaml
+++ b/ExViewer/Controls/TaggingRecordPresenter.xaml
@@ -5,10 +5,11 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
-             d:DesignHeight="300"
+             d:DesignHeight="20"
              d:DesignWidth="400">
 
   <Grid>
-    <TextBlock Text="{x:Bind Record.Tag.ToString(), Mode=OneWay}" />
+    <TextBlock x:Name="tbTag" />
+    <TextBlock x:Name="tbStatus" HorizontalAlignment="Right" Foreground="Red"/>
   </Grid>
 </UserControl>
