--- a/ExViewer/Views/InfoPage.xaml
+++ b/ExViewer/Views/InfoPage.xaml
@@ -118,7 +118,7 @@
                              HorizontalContentAlignment="Stretch"
                              NavigateUri="{x:Bind s:ToplistNameExtension.Uri(Name)}">
               <Grid Background="Transparent">
-                <TextBlock Text="{x:Bind Name}"
+                <TextBlock Text="{x:Bind s:ToplistNameExtension.ToDisplayString(Name)}"
                            HorizontalAlignment="Left" />
                 <TextBlock Text="{x:Bind Rank, Converter={StaticResource StringConverter}, ConverterParameter='Views/InfoPage/ToplistItemRankFormatString'}"
                            HorizontalAlignment="Right" />
