--- a/ExViewer/Controls/CommentViewerResourceDictionary.xaml
+++ b/ExViewer/Controls/CommentViewerResourceDictionary.xaml
@@ -2,55 +2,66 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="using:ExViewer.Controls"
                     xmlns:con="using:Opportunity.Converters"
+                    xmlns:tcon="using:Opportunity.Converters.Typed"
                     xmlns:commenting="using:ExClient.Galleries.Commenting">
-    <Style x:Key="HeaderRectangleStyle"
-           TargetType="Rectangle">
-        <Setter Property="Fill"
-                Value="{ThemeResource SystemControlBackgroundBaseLowBrush}" />
-        <Setter Property="StrokeThickness"
-                Value="0" />
-    </Style>
-    <Style x:Key="CommentHeaderTextBlockStyle"
-           TargetType="TextBlock">
-        <Setter Property="FontSize"
-                Value="14" />
-        <Setter Property="FontWeight"
-                Value="Medium" />
-        <Setter Property="Margin"
-                Value="8,0" />
-    </Style>
-    <con:EnumToBooleanConverter x:Key="ConUp"
-                                NextConverter="{StaticResource TrueToVisibleConverter}">
-        <commenting:CommentStatus>VotedDown</commenting:CommentStatus>
-        <commenting:CommentStatus>Votable</commenting:CommentStatus>
-    </con:EnumToBooleanConverter>
-    <con:EnumToBooleanConverter x:Key="ConWithdraw"
-                                NextConverter="{StaticResource TrueToVisibleConverter}">
-        <commenting:CommentStatus>VotedUp</commenting:CommentStatus>
-        <commenting:CommentStatus>VotedDown</commenting:CommentStatus>
-    </con:EnumToBooleanConverter>
-    <con:EnumToBooleanConverter x:Key="ConDown"
-                                NextConverter="{StaticResource TrueToVisibleConverter}">
-        <commenting:CommentStatus>VotedUp</commenting:CommentStatus>
-        <commenting:CommentStatus>Votable</commenting:CommentStatus>
-    </con:EnumToBooleanConverter>
-    <con:EnumToBooleanConverter x:Key="ConEdit"
-                                NextConverter="{StaticResource TrueToVisibleConverter}">
-        <commenting:CommentStatus>Editable</commenting:CommentStatus>
-    </con:EnumToBooleanConverter>
-    <con:EnumToBooleanConverter x:Key="ConReply"
-                                NextConverter="{StaticResource FalseToVisibleConverter}">
-        <commenting:CommentStatus>Editable</commenting:CommentStatus>
-    </con:EnumToBooleanConverter>
-    <con:NullTestConverter x:Key="ContentOpacity"
-                           IfNull="True">
-        <con:BooleanToObjectConverter>
-            <con:BooleanToObjectConverter.ValueForTrue>
-                <x:Double>1</x:Double>
-            </con:BooleanToObjectConverter.ValueForTrue>
-            <con:BooleanToObjectConverter.ValueForFalse>
-                <x:Double>0.6</x:Double>
-            </con:BooleanToObjectConverter.ValueForFalse>
-        </con:BooleanToObjectConverter>
-    </con:NullTestConverter>
+  <Style x:Key="HeaderRectangleStyle"
+         TargetType="Rectangle">
+    <Setter Property="Fill"
+            Value="{ThemeResource SystemControlBackgroundBaseLowBrush}" />
+    <Setter Property="StrokeThickness"
+            Value="0" />
+  </Style>
+  <Style x:Key="CommentHeaderTextBlockStyle"
+         TargetType="TextBlock">
+    <Setter Property="FontSize"
+            Value="14" />
+    <Setter Property="FontWeight"
+            Value="Medium" />
+    <Setter Property="Margin"
+            Value="8,0" />
+  </Style>
+  <con:ChainConverter x:Key="ConUp">
+    <tcon:EnumToBooleanConverter>
+      <commenting:CommentStatus>VotedDown</commenting:CommentStatus>
+      <commenting:CommentStatus>Votable</commenting:CommentStatus>
+    </tcon:EnumToBooleanConverter>
+    <con:ConverterReference Converter="{StaticResource TrueToVisibleConverter}" />
+  </con:ChainConverter>
+  <con:ChainConverter x:Key="ConWithdraw">
+    <tcon:EnumToBooleanConverter>
+      <commenting:CommentStatus>VotedUp</commenting:CommentStatus>
+      <commenting:CommentStatus>VotedDown</commenting:CommentStatus>
+    </tcon:EnumToBooleanConverter>
+    <con:ConverterReference Converter="{StaticResource TrueToVisibleConverter}" />
+  </con:ChainConverter>
+  <con:ChainConverter x:Key="ConDown">
+    <tcon:EnumToBooleanConverter>
+      <commenting:CommentStatus>VotedUp</commenting:CommentStatus>
+      <commenting:CommentStatus>Votable</commenting:CommentStatus>
+    </tcon:EnumToBooleanConverter>
+    <con:ConverterReference Converter="{StaticResource TrueToVisibleConverter}" />
+  </con:ChainConverter>
+  <con:ChainConverter x:Key="ConEdit">
+    <tcon:EnumToBooleanConverter>
+      <commenting:CommentStatus>Editable</commenting:CommentStatus>
+    </tcon:EnumToBooleanConverter>
+    <con:ConverterReference Converter="{StaticResource TrueToVisibleConverter}" />
+  </con:ChainConverter>
+  <con:ChainConverter x:Key="ConReply">
+    <tcon:EnumToBooleanConverter>
+      <commenting:CommentStatus>Editable</commenting:CommentStatus>
+    </tcon:EnumToBooleanConverter>
+    <con:ConverterReference Converter="{StaticResource FalseToVisibleConverter}" />
+  </con:ChainConverter>
+  <con:ChainConverter x:Key="ContentOpacity">
+    <con:ConverterReference Converter="{StaticResource NullToTrueConverter}" />
+    <tcon:BooleanToObjectConverter>
+      <tcon:BooleanToObjectConverter.ValueForTrue>
+        <x:Double>1</x:Double>
+      </tcon:BooleanToObjectConverter.ValueForTrue>
+      <tcon:BooleanToObjectConverter.ValueForFalse>
+        <x:Double>0.6</x:Double>
+      </tcon:BooleanToObjectConverter.ValueForFalse>
+    </tcon:BooleanToObjectConverter>
+  </con:ChainConverter>
 </ResourceDictionary>
