--- a/ExViewer/Controls/TagPresenter.xaml
+++ b/ExViewer/Controls/TagPresenter.xaml
@@ -13,6 +13,7 @@
     <MenuFlyout x:Name="mfoTag"
                 Placement="Bottom">
       <MenuFlyoutItem x:Name="mfiContent"
+                      Icon="Tag"
                       Text="{x:Bind SelectedTag.Content.Content, Mode=OneWay}"
                       ToolTipService.ToolTip="{x:Bind SelectedTag.Content.Content, Mode=OneWay}"
                       Click="mfiContent_Click" />
@@ -20,22 +21,33 @@
       <MenuFlyoutItem x:Uid="Controls/TagPresenter/TagVoteUpMenuFlyoutItem"
                       x:Name="mfiUp"
                       Click="mfiUp_Click"
-                      Text="Vote up" />
+                      Text="Vote up">
+        <MenuFlyoutItem.Icon>
+          <FontIcon Glyph="&#xE70E;" />
+        </MenuFlyoutItem.Icon>
+      </MenuFlyoutItem>
       <MenuFlyoutItem x:Uid="Controls/TagPresenter/TagVoteDownMenuFlyoutItem"
                       x:Name="mfiDown"
                       Click="mfiDown_Click"
-                      Text="Vote down" />
+                      Text="Vote down">
+        <MenuFlyoutItem.Icon>
+          <FontIcon Glyph="&#xE70D;" />
+        </MenuFlyoutItem.Icon>
+      </MenuFlyoutItem>
       <MenuFlyoutItem x:Uid="Controls/TagPresenter/TagWithdrawVoteMenuFlyoutItem"
                       x:Name="mfiWithdraw"
+                      Icon="Undo"
                       Click="mfiWithdraw_Click"
                       Text="Withdraw vote" />
       <MenuFlyoutSeparator />
       <MenuFlyoutItem x:Name="mfiTagDefination"
                       x:Uid="Controls/TagPresenter/GoToDefinitionMenuFlyoutItem"
+                      Icon="Library"
                       Click="mfiTagDefination_Click"
                       Text="Go to EHWiki for definition" />
       <MenuFlyoutItem x:Name="mfiTagSearch"
                       x:Uid="Controls/TagPresenter/SearchTagMenuFlyoutItem"
+                      Icon="Find"
                       Click="mfiTagSearch_Click"
                       Text="Show galleries with this tag" />
     </MenuFlyout>
