--- a/ExViewer/Views/SavedPage.xaml
+++ b/ExViewer/Views/SavedPage.xaml
@@ -1,109 +1,111 @@
 ﻿<controls:MyPage x:Class="ExViewer.Views.SavedPage"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:local="using:ExViewer.Views"
-      xmlns:controls="using:ExViewer.Controls"
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-      NavigationCacheMode="Enabled"
-      x:Name="page"
-      mc:Ignorable="d"
-      xmlns:tk="using:Microsoft.Toolkit.Uwp.UI.Controls">
-    <Page.Resources>
-        <MenuFlyout x:Name="mf_Gallery"
-                    Placement="Bottom">
-            <MenuFlyoutItem x:Uid="Views/SavedPage/DeleteMenuFlyout"
-                            x:Name="mfi_DeleteGallery"
-                            Text="Delete"
-                            Command="{x:Bind VM.Delete, Mode=OneWay}" />
-        </MenuFlyout>
-    </Page.Resources>
-    <Page.Transitions>
-        <TransitionCollection>
-            <NavigationThemeTransition>
-                <DrillInNavigationTransitionInfo />
-            </NavigationThemeTransition>
-        </TransitionCollection>
-    </Page.Transitions>
+                 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                 xmlns:local="using:ExViewer.Views"
+                 xmlns:controls="using:ExViewer.Controls"
+                 xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                 NavigationCacheMode="Enabled"
+                 x:Name="page"
+                 mc:Ignorable="d"
+                 xmlns:tk="using:Microsoft.Toolkit.Uwp.UI.Controls">
+  <Page.Resources>
+    <MenuFlyout x:Name="mf_Gallery"
+                Placement="Bottom">
+      <MenuFlyoutItem x:Uid="Views/SavedPage/DeleteMenuFlyout"
+                      x:Name="mfi_DeleteGallery"
+                      Icon="Delete"
+                      Text="Delete"
+                      Command="{x:Bind VM.Delete, Mode=OneWay}" />
+    </MenuFlyout>
+  </Page.Resources>
+  <Page.Transitions>
+    <TransitionCollection>
+      <NavigationThemeTransition>
+        <DrillInNavigationTransitionInfo />
+      </NavigationThemeTransition>
+    </TransitionCollection>
+  </Page.Transitions>
 
-    <RelativePanel>
-        <VisualStateManager.VisualStateGroups>
-            <VisualStateGroup>
-                <VisualState>
-                    <VisualState.StateTriggers>
-                        <local:DeviceTrigger ActiveType="Windows.Desktop" />
-                    </VisualState.StateTriggers>
-                    <VisualState.Setters>
-                        <Setter Target="lv.CanDragItems" Value="True"/>
-                    </VisualState.Setters>
-                </VisualState>
-            </VisualStateGroup>
-        </VisualStateManager.VisualStateGroups>
-        <tk:PullToRefreshListView x:Name="lv"
-                                  RefreshCommand="{x:Bind VM.Refresh}"
-                                  RelativePanel.AlignBottomWithPanel="True"
-                                  RelativePanel.AlignLeftWithPanel="True"
-                                  RelativePanel.AlignRightWithPanel="True"
-                                  RelativePanel.Below="cb_top"
-                                  Margin="{x:Bind VisibleBoundsThickness, Mode=OneWay, Converter={StaticResource ThicknessConverter}, ConverterParameter='x1,x0'}"
-                                  Padding="{x:Bind VisibleBoundsThickness, Mode=OneWay, Converter={StaticResource ThicknessConverter}, ConverterParameter='x0,x0,x0,x1'}"
-                                  ItemsSource="{x:Bind VM.Galleries, Mode=OneWay}"
-                                  Style="{StaticResource GalleryListViewStyle}"
-                                  ItemClick="lv_ItemClick"
-                                  ContextCanceled="lv_ContextCanceled"
-                                  ContextRequested="lv_ContextRequested">
-            <tk:PullToRefreshListView.RefreshIndicatorContent>
-                <tk:PullToRefreshIndicator />
-            </tk:PullToRefreshListView.RefreshIndicatorContent>
-            <ListView.ItemTemplate>
-                <DataTemplate xmlns:c="using:ExClient.Galleries"
-                              xmlns:controls="using:ExViewer.Controls"
-                              x:DataType="c:Gallery">
-                    <controls:GalleryViewer x:Name="gv_Gallery"
-                                            Gallery="{x:Bind}" />
-                </DataTemplate>
-            </ListView.ItemTemplate>
-            <ListView.Footer>
-                <TextBlock x:Uid="Views/SavedPage/LoadingMoreTextBlock"
-                           HorizontalAlignment="Center"
-                           Margin="12"
-                           Style="{StaticResource BaseTextBlockStyle}"
-                           Visibility="{x:Bind VM.Galleries, FallbackValue=Visible, Converter={StaticResource NullToVisibleConverter}, Mode=OneWay}"
-                           Text="Loading more galleries..." />
-            </ListView.Footer>
-            <ListView.Header>
-                <TextBlock x:Uid="Views/SavedPage/EmptyTextBlock"
-                           HorizontalAlignment="Center"
-                           Margin="12"
-                           Style="{StaticResource BaseTextBlockStyle}"
-                           Visibility="{x:Bind VM.Galleries.Count, Mode=OneWay, Converter={StaticResource ZeroToVisibleConverter}, FallbackValue=Collapsed}"
-                           Text="No saved galleries" />
-            </ListView.Header>
-        </tk:PullToRefreshListView>
-        <Border Style="{StaticResource TopBarPlaceholderBorderStyle}"
-                Padding="{x:Bind VisibleBoundsThickness, Mode=OneWay, Converter={StaticResource ThicknessConverter}, ConverterParameter='x1,48,x1,x0'}"
+  <RelativePanel>
+    <VisualStateManager.VisualStateGroups>
+      <VisualStateGroup>
+        <VisualState>
+          <VisualState.StateTriggers>
+            <local:DeviceTrigger ActiveType="Windows.Desktop" />
+          </VisualState.StateTriggers>
+          <VisualState.Setters>
+            <Setter Target="lv.CanDragItems"
+                    Value="True" />
+          </VisualState.Setters>
+        </VisualState>
+      </VisualStateGroup>
+    </VisualStateManager.VisualStateGroups>
+    <tk:PullToRefreshListView x:Name="lv"
+                              RefreshCommand="{x:Bind VM.Refresh}"
+                              RelativePanel.AlignBottomWithPanel="True"
+                              RelativePanel.AlignLeftWithPanel="True"
+                              RelativePanel.AlignRightWithPanel="True"
+                              RelativePanel.Below="cb_top"
+                              Margin="{x:Bind VisibleBoundsThickness, Mode=OneWay, Converter={StaticResource ThicknessConverter}, ConverterParameter='x1,x0'}"
+                              Padding="{x:Bind VisibleBoundsThickness, Mode=OneWay, Converter={StaticResource ThicknessConverter}, ConverterParameter='x0,x0,x0,x1'}"
+                              ItemsSource="{x:Bind VM.Galleries, Mode=OneWay}"
+                              Style="{StaticResource GalleryListViewStyle}"
+                              ItemClick="lv_ItemClick"
+                              ContextCanceled="lv_ContextCanceled"
+                              ContextRequested="lv_ContextRequested">
+      <tk:PullToRefreshListView.RefreshIndicatorContent>
+        <tk:PullToRefreshIndicator />
+      </tk:PullToRefreshListView.RefreshIndicatorContent>
+      <ListView.ItemTemplate>
+        <DataTemplate xmlns:c="using:ExClient.Galleries"
+                      xmlns:controls="using:ExViewer.Controls"
+                      x:DataType="c:Gallery">
+          <controls:GalleryViewer x:Name="gv_Gallery"
+                                  Gallery="{x:Bind}" />
+        </DataTemplate>
+      </ListView.ItemTemplate>
+      <ListView.Footer>
+        <TextBlock x:Uid="Views/SavedPage/LoadingMoreTextBlock"
+                   HorizontalAlignment="Center"
+                   Margin="12"
+                   Style="{StaticResource BaseTextBlockStyle}"
+                   Visibility="{x:Bind VM.Galleries, FallbackValue=Visible, Converter={StaticResource NullToVisibleConverter}, Mode=OneWay}"
+                   Text="Loading more galleries..." />
+      </ListView.Footer>
+      <ListView.Header>
+        <TextBlock x:Uid="Views/SavedPage/EmptyTextBlock"
+                   HorizontalAlignment="Center"
+                   Margin="12"
+                   Style="{StaticResource BaseTextBlockStyle}"
+                   Visibility="{x:Bind VM.Galleries.Count, Mode=OneWay, Converter={StaticResource ZeroToVisibleConverter}, FallbackValue=Collapsed}"
+                   Text="No saved galleries" />
+      </ListView.Header>
+    </tk:PullToRefreshListView>
+    <Border Style="{StaticResource TopBarPlaceholderBorderStyle}"
+            Padding="{x:Bind VisibleBoundsThickness, Mode=OneWay, Converter={StaticResource ThicknessConverter}, ConverterParameter='x1,48,x1,x0'}"
+            RelativePanel.AlignLeftWithPanel="True"
+            RelativePanel.AlignRightWithPanel="True" />
+    <CommandBar x:Name="cb_top"
+                Margin="{x:Bind VisibleBoundsThickness, Mode=OneWay, Converter={StaticResource ThicknessConverter}, ConverterParameter='x1,x1,x1,x0'}"
                 RelativePanel.AlignLeftWithPanel="True"
-                RelativePanel.AlignRightWithPanel="True" />
-        <CommandBar x:Name="cb_top"
-                    Margin="{x:Bind VisibleBoundsThickness, Mode=OneWay, Converter={StaticResource ThicknessConverter}, ConverterParameter='x1,x1,x1,x0'}"
-                    RelativePanel.AlignLeftWithPanel="True"
-                    RelativePanel.AlignRightWithPanel="True"
-                    HorizontalContentAlignment="Stretch">
-            <CommandBar.PrimaryCommands>
-                <AppBarButton x:Uid="Views/SavedPage/RefreshAppBarButton"
-                              x:Name="abb_Refresh"
-                              Command="{x:Bind VM.Refresh}"
-                              ToolTipService.ToolTip="{x:Bind abb_Refresh.Label}"
-                              Icon="Refresh"
-                              Label="Refresh" />
-            </CommandBar.PrimaryCommands>
-            <CommandBar.SecondaryCommands>
-                <AppBarButton x:Uid="Views/SavedPage/DeleteAllAppBarButton"
-                              x:Name="abb_DeleteAll"
-                              Click="abb_DeleteAll_Click"
-                              Icon="Delete"
-                              Label="Delete all" />
-            </CommandBar.SecondaryCommands>
-        </CommandBar>
-    </RelativePanel>
+                RelativePanel.AlignRightWithPanel="True"
+                HorizontalContentAlignment="Stretch">
+      <CommandBar.PrimaryCommands>
+        <AppBarButton x:Uid="Views/SavedPage/RefreshAppBarButton"
+                      x:Name="abb_Refresh"
+                      Command="{x:Bind VM.Refresh}"
+                      ToolTipService.ToolTip="{x:Bind abb_Refresh.Label}"
+                      Icon="Refresh"
+                      Label="Refresh" />
+      </CommandBar.PrimaryCommands>
+      <CommandBar.SecondaryCommands>
+        <AppBarButton x:Uid="Views/SavedPage/DeleteAllAppBarButton"
+                      x:Name="abb_DeleteAll"
+                      Click="abb_DeleteAll_Click"
+                      Icon="Delete"
+                      Label="Delete all" />
+      </CommandBar.SecondaryCommands>
+    </CommandBar>
+  </RelativePanel>
 </controls:MyPage>
